--- a/index.html
+++ b/index.html
@@ -15,14 +15,15 @@
 
     <header>
       <div class="container">
-        <h1>Rivaldi Project</h1>
-        <h2>Rivaldi Project</h2>
+        <h1>Arief Rivaldi Site</h1>
+        <h2>Personal Site</h2>
 
-        <section id="downloads">
+        <!--<section id="downloads">
           <a href="https://github.com/ariefrivaldi/rivaldi.github.io/zipball/master" class="btn">Download as .zip</a>
           <a href="https://github.com/ariefrivaldi/rivaldi.github.io/tarball/master" class="btn">Download as .tar.gz</a>
           <a href="https://github.com/ariefrivaldi/rivaldi.github.io" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
         </section>
+        -->
       </div>
     </header>
 
